--- a/css/main.css
+++ b/css/main.css
@@ -883,6 +883,10 @@ input[type=radio] {
   transition: color var(--timing-function);
 }
 
+.services-dedicated__text {
+  color: var(--primary-text-color);
+}
+
 .services-dedicated__list {
   justify-content: space-between;
   flex-wrap: wrap;
@@ -1170,7 +1174,7 @@ input[type=radio] {
   .contact__container {
     display: flex;
     flex-flow: column;
-    gap: 60px;
+    gap: 30px;
     align-items: center;
   }
   .contact__call {
@@ -1520,6 +1524,7 @@ input[type=radio] {
   min-width: 45%;
   justify-content: space-between;
   display: flex;
+  margin-top: 30px;
 }
 
 .footer__subtitle {
@@ -2533,11 +2538,16 @@ input[type=radio] {
     width: 100%;
   }
 }
+.author__title {
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
+
 .author__section {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-top: 60px;
+  padding-top: 30px;
   padding-bottom: 60px;
 }
 
@@ -2617,8 +2627,8 @@ input[type=radio] {
 
 .article-page__image {
   width: 50%;
-  float: left;
-  margin-right: 30px;
+  float: right;
+  margin-left: 30px;
   margin-bottom: 20px;
 }
 
