--- a/sass/components/_article-page.scss
+++ b/sass/components/_article-page.scss
@@ -4,8 +4,8 @@
 
 .article-page__image {
   width: 50%;
-  float: left;
-  margin-right: 30px;
+  float: right;
+  margin-left: 30px;
   margin-bottom: 20px;
 }
 
