--- a/sass/components/_author-page.scss
+++ b/sass/components/_author-page.scss
@@ -1,8 +1,13 @@
+.author__title {
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
+
 .author__section {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-top: 60px;
+  padding-top: 30px;
   padding-bottom: 60px;
 }
 
