--- a/sass/components/_services.scss
+++ b/sass/components/_services.scss
@@ -187,6 +187,10 @@ input[type="radio"] {
   transition: color var(--timing-function);
 }
 
+.services-dedicated__text {
+  color: var(--primary-text-color);
+}
+
 .services-dedicated__list {
   justify-content: space-between;
   flex-wrap: wrap;
